<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cabecera"
        android:columnCount="2"
        android:padding="20dp"
        android:rowCount="4"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="bottom|start"
            app:srcCompat="@drawable/ic_camera" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="bottom|end"
            app:srcCompat="@drawable/circle"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/txtScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/txtScan"
            android:textColor="@color/corazon" />

        <TextView
            android:id="@+id/txtCabecera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:paddingTop="20dp"
            android:text="@string/txtCabecera"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="bottom|end"
            android:background="@color/cabecera"
            android:src="@drawable/ic_heart_fill"
            app:tint="@color/corazon" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:paddingTop="10dp"
            android:text="@string/txtDate"
            android:textColor="@color/black" />

    </GridLayout>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="75dp">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/cabecera"
                android:src="@drawable/ic_calendar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:text="@string/icProgram"
                android:textColor="@color/black"
                android:textSize="11sp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="75dp">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/grey"
                android:src="@drawable/ic_frame" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:text="@string/icArtworks"
                android:textColor="@color/black"
                android:textSize="11sp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="75dp">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/beige"
                android:src="@drawable/ic_pin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:text="@string/icMap"
                android:textColor="@color/black"
                android:textSize="11sp" />

        </FrameLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPhotographers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/menuNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout1" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menuNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemIconTint="@color/grey"
        app:itemTextColor="@color/grey2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bar" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>